--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -54,7 +54,7 @@
                                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.3 <date>2023</date>
+                <edition>v 1.1.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -96,7 +96,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-16T18:43:46.919Z" user="admin">16/06/2023 18:43:46</note>
+                                <note type="lastUpdated" date-time="2023-06-17T11:40:35.616Z" user="admin">17/06/2023 11:40:35</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary
@@ -152,6 +152,7 @@
                             <note type="updated" update="text-version" value="1.1.2" date-time="2023-06-07T18:06:31.13Z" user="john">Further edits to ch 1.</note>
                             <note type="updated" update="translation-status" value="2" date-time="2023-06-16T18:43:42.618Z" user="john">2</note>
                             <note type="updated" update="text-version" value="1.1.3" date-time="2023-06-16T18:43:42.618Z" user="john">Finished revising chapters 1 and 2, but further work required on the rest. Status reversed to 2, since the translation is not yet good enough for publication.</note>
+                            <note type="updated" update="text-version" value="1.1.4" date-time="2023-06-17T11:40:32.721Z" user="john">Further edits to ch 2.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -936,16 +937,16 @@
                                                 friend gives instructions and teachings?”</p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-85"/>
                                         <p tid="76">“Śāriputra,” the Blessed One replied, “a monk
-                                                might instruct and teach another monk as follws: ‘Come, monk.
-                                                Focus on the Buddha, focus on the Dharma, and focus
-                                                on the Saṅgha. Focus on recollecting moral
-                                                discipline. Focus on recollecting giving. Focus on
-                                                recollecting the gods. Come, monk. Place and sustain your attention on 
-                                                the body as being the body. To
-                                                keep hold of the marks of sustaining, focus on
-                                                the body’s impure marks. Come,
-                                                monk. Focus on the fact that all formations are
-                                                impermanent and are suffering. Focus on the fact
+                                                might instruct and teach another monk as follows: ‘Come, monk.
+                                                Engage your attention on the Buddha, engage your attention on the Dharma, and engage your attention
+                                                on the Saṅgha. Engage your attention on recollecting moral
+                                                discipline. Engage your attention on recollecting giving. Engage your attention on
+                                                recollecting the gods. Come, monk. Observe  
+                                                the body as being the body and sustain that observing. To
+                                                keep hold of the marks of sustaining, engage your attention on
+                                                the body’s impure characteristics. Come,
+                                                monk. Engage your attention on the fact that all formations are
+                                                impermanent and are suffering. Engage your attention on the fact
                                                 that all phenomena lack a self and are empty. Come,
                                                 monk. Hold fast to the marks you have observed and
                                                 keep them in mind. Bear the marks you have observed
@@ -961,26 +962,25 @@
                                                 aspects of the aggregates, the sense fields, and the
                                                 elements as repulsive. <tei:ref cRef="F.9.a" type="folio" xml:id="UT22084-063-001-829"/> Come,
                                                 monk. Bear in mind the marks that indicate virtuous
-                                                and nonvirtuous qualities. Then, focus on these key
-                                                points to abandon them: To abandon desire, focus on
-                                                impurity. To abandon anger, focus on love. To
-                                                abandon delusion, focus on dependent origination.
-                                                Come, monk. Focus on pure moral discipline. Focus on
-                                                the marks related to absorption. Focus on pure
+                                                and nonvirtuous qualities. Then, engage your attention on these key
+                                                points to abandon them: To abandon desire, engage your attention on
+                                                impurity. To abandon anger, engage your attention on love. To
+                                                abandon delusion, engage your attention on dependent origination.
+                                                Come, monk. Engage your attention on pure moral discipline. Engage your attention on
+                                                the marks related to absorption. Engage your attention on pure
                                                 insight. Direct your effort toward the four
                                                 concentrations. Reflect upon and work to acquire the
-                                                result you should attain. Focus without considering
-                                                nonvirtuous qualities. Focus and rely on virtuous
+                                                result you should attain. Engage your attention without considering
+                                                nonvirtuous qualities. Engage your attention and rely on virtuous
                                                 qualities. Strive to cultivate the path. Bear those
                                                 marks that indicate virtuous qualities perfectly in
-                                                mind and focus on the fact that nirvāṇa is
+                                                mind and engage your attention on the fact that nirvāṇa is
                                                 happiness and peace. Work to acquire this view, so
-                                                that you can attain nirvāṇa.’ But when a monk instructs and teaches another 
-                                                with such statements and tells him,
-                                                ‘Focus on purity,’ he is encouraging him to hold a
-                                                mistaken understanding. The idea that this is the
-                                                correct view will encourage him to hold a wrong
-                                                view.</p>
+                                                that you can attain nirvāṇa. Engage your attention on purity.’ 
+                                                When a monk instructs and teaches another 
+                                                with such statements, he is encouraging him to hold a
+                                                mistaken understanding. The notion that this is to view
+                                                things correctly will encourage him to view things wrongly.</p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-86"/>
                                         <p tid="77">“Śāriputra, those who instruct and teach others
                                                 in such a manner are evil friends, and they are deprecating me.
@@ -989,8 +989,8 @@
                                                 not authorize the donation of the offerings of the faithful to be used
                                                 by such unholy beings, not even as little as a small cup of water.</p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-87"/>
-                                        <p tid="78">“Śāriputra, what I say is for the sake of those who give instructions,   
-                                                but these ones are not instructing and teaching
+                                        <p tid="78">“Śāriputra, it is for the sake of those who give instructions that I am saying this,   
+                                                but those people are not instructing and teaching
                                                 others in accordance with my words. Why is that?
                                                 Those who give such instructions and
                                                 teachings are mostly those who have fallen victim to pride. 
@@ -1008,7 +1008,7 @@
                                         <p tid="79">“Then, Śāriputra, there are those monks who hear
                                                 the teachings on emptiness and nonapprehending
                                                 related to such instructions and teachings, accept
-                                                them in accord with those instructions, and focus on
+                                                them in accord with those instructions, and engage their attention on
                                                 emptiness. They have no doubts or reservations about
                                                 the teaching of nonapprehending and emptiness. If
                                                 they engage in it, understand it, contemplate it,
