--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -54,7 +54,7 @@
                                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.3 <date>2023</date>
+                <edition>v 1.1.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -96,7 +96,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-18T20:00:53.851Z" user="admin">18/06/2023 20:00:53</note>
+                                <note type="lastUpdated" date-time="2023-06-18T20:02:10.492Z" user="admin">18/06/2023 20:02:10</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary
@@ -154,6 +154,7 @@
                             <note type="updated" update="text-version" value="1.1.3" date-time="2023-06-16T18:43:42.618Z" user="john">Finished revising chapters 1 and 2, but further work required on the rest. Status reversed to 2, since the translation is not yet good enough for publication.</note>
                             <note type="updated" update="text-version" value="1.1.4" date-time="2023-06-17T11:40:32.721Z" user="john">Further edits to ch 2.</note>
                             <note type="updated" update="text-version" value="1.1.3" date-time="2023-06-18T20:00:50.99Z" user="john">Finished revising chapters 1 and 2, but further work required on the rest. Status reversed to 2, since the translation is not yet good enough for publication.</note>
+                            <note type="updated" update="text-version" value="1.1.5" date-time="2023-06-18T20:02:07.601Z" user="john">Further edits.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
