--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -54,7 +54,7 @@
                                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.5 <date>2023</date>
+                <edition>v 1.1.6 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -96,7 +96,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-18T20:02:10.492Z" user="admin">18/06/2023 20:02:10</note>
+                                <note type="lastUpdated" date-time="2023-06-18T20:33:18.643Z" user="admin">18/06/2023 20:33:18</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary
@@ -155,6 +155,7 @@
                             <note type="updated" update="text-version" value="1.1.4" date-time="2023-06-17T11:40:32.721Z" user="john">Further edits to ch 2.</note>
                             <note type="updated" update="text-version" value="1.1.3" date-time="2023-06-18T20:00:50.99Z" user="john">Finished revising chapters 1 and 2, but further work required on the rest. Status reversed to 2, since the translation is not yet good enough for publication.</note>
                             <note type="updated" update="text-version" value="1.1.5" date-time="2023-06-18T20:02:07.601Z" user="john">Further edits.</note>
+                            <note type="updated" update="text-version" value="1.1.6" date-time="2023-06-18T20:33:15.772Z" user="john">Further edits.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -979,7 +980,7 @@
                                                 mind and engage your attention on the fact that nirvāṇa is
                                                 happiness and peace. Work to acquire this view, so
                                                 that you can attain nirvāṇa.’ When a monk instructs and teaches another 
-                                                with such statements and also says, ‘Engage your attention on purity.’ 
+                                                with such statements and also says, ‘Engage your attention on purity,’ 
                                                 he is encouraging him to hold a
                                                 mistaken understanding. The notion that this is to view
                                                 things correctly will encourage him to view things wrongly.</p>
@@ -1007,7 +1008,7 @@
                                                 are mixed in the purview of non-Buddhists I say are behaving
                                                 just like the members of Māra’s hordes.</p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-88"/>
-                                        <p tid="79">“Then, Śāriputra, there are those monks who hear
+                                        <p tid="79">“On the other hand, Śāriputra, there are also monks who hear
                                                 the teachings on emptiness and nonapprehending
                                                 related to such instructions and teachings, accept
                                                 them in accord with those instructions, and engage their attention on
@@ -1039,17 +1040,19 @@
                                                 master such an acceptance will reach nirvāṇa in this
                                                 world. </p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-90"/>
-                                        <p tid="81">“Śāriputra, some monks, when they are instructed and taught 
-                                                the teachings on nonapprehension and emptiness, if they feel
-                                                afraid, scared, or terrified on so hearing, they
+                                        <p tid="81">“Furthermore, Śāriputra, other monks, when instructed and taught 
+                                                the teachings on nonapprehension and emptiness, may feel
+                                                afraid, scared, or terrified on hearing them; if so, they
                                                 will be reborn in the hell realms without a lord,
                                                 refuge, and teacher. Why is that? 
-                                                Because, Śāriputra, it is to be afraid of the teachings of the Buddha   
-                                                that is itself what completes the conditions for lower rebirth.
-                                                Moreover, Śāriputra, I have said that some people will take
-                                                rebirth in the lower realms. Why is that? Śāriputra, 
-                                                the nonexistence that they identify in that way as the teachings of the Buddha
-                                                is a nonexistence that they have imputed upon what they apprehend.</p>
+                                                Because, Śāriputra, what completes the conditions for their lower rebirth
+                                                is to be afraid of the teachings of the Buddha.
+                                                Moreover, Śāriputra, when I say that some of them will take
+                                                rebirth in the lower realms, why is that? Śāriputra, 
+                                                <!--review: the non-existence they designate as the teachings of the Buddha
+                                                is a non-existence designated in their apprehending-->
+                                                what is not in that way designated as the teachings of the Buddha
+                                                is not designated in what they apprehend.</p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-91"/>
                                         <p tid="82">“Śāriputra, for someone even to
                                                 commit the five deeds entailing immediate
