--- a/translations/kangyur/translations/090-034_toh590,985-sitatapatra_born_from_the_usnisa_of_all_tathagatas.xml
+++ b/translations/kangyur/translations/090-034_toh590,985-sitatapatra_born_from_the_usnisa_of_all_tathagatas.xml
@@ -7,26 +7,26 @@
         <title type="mainTitle" xml:lang="en">Sitātapatrā Born from the Uṣṇīṣa of All
           Tathāgatas</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Sarva­tathāgatoṣṇīṣa­sitātapatrā</title>
+        <title type="mainTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་ནས་བྱུང་བ་གདུགས་དཀར་པོ་ཅན།</title>
         <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor nas
           byung ba gdugs dkar po can</title>
-        <title type="mainTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་ནས་བྱུང་བ་གདུགས་དཀར་པོ་ཅན།</title>
+        <title type="longTitle" xml:lang="en">The Noble Invincible Great Queen of Spells for
+          Averting Called “Sitātapatrā Born from the Uṣṇīṣa of All Tathāgatas”</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sarva­tathāgatoṣṇīṣasitātapatrā­nāmāparājita­pratyaṅgirāmahāvidyārājñī</title>
+        <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་ནས་བྱུང་བ་གདུགས་དཀར་པོ་ཅན་ཞེས་བྱ་བ་གཞན་གྱིས་མི་ཐུབ་མ་ཕྱིར་ཟློག་པའི་རིག་སྔགས་ཀྱི་རྒྱལ་མོ་ཆེན་མོ།</title>
         <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa thams cad kyi gtsug
           tor nas byung ba gdugs dkar po can zhes bya ba gzhan gyis mi thub ma phyir zlog pa’i rig
           sngags kyi rgyal mo chen mo</title>
-        <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་ནས་བྱུང་བ་གདུགས་དཀར་པོ་ཅན་ཞེས་བྱ་བ་གཞན་གྱིས་མི་ཐུབ་མ་ཕྱིར་ཟློག་པའི་རིག་སྔགས་ཀྱི་རྒྱལ་མོ་ཆེན་མོ།</title>
-        <title type="longTitle" xml:lang="en">The Noble Invincible Great Queen of Spells for
-          Averting Called “Sitātapatrā Born from the Uṣṇīṣa of All Tathāgatas”</title>
         <title type="otherTitle" xml:lang="en">The Spell of Uṣṇīṣasitātapatrā</title>
-        <title type="otherTitle" xml:lang="zh">佛頂大白傘蓋陀羅尼經</title>
         <title type="otherTitle" xml:lang="Sa-Ltn">Uṣṇīṣasitātapatrāparājita­­pratyaṅgirā­­mahāvidyārājñī</title>
+        <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa thams cad kyi gtsug
+          tor nas byung ba gdugs dkar po can zhes bya ba gzhan gyis mi thub pa phyir bzlog pa’i rig
+          sngags kyi rgyal mo chen mo/</title>
         <title type="otherTitle" xml:lang="Bo-Ltn">gtsug tor gdugs dkar gzhan gyi rig sngags</title>
         <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa thams cad kyi gtsug
           tor nas byung ba’i gdugs dkar po can zhes bya ba gzhan gyis mi thub ma phyir zlog pa’i rig
           sngags kyi rgyal mo chen mo</title>
-        <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa thams cad kyi gtsug
-          tor nas byung ba gdugs dkar po can zhes bya ba gzhan gyis mi thub pa phyir bzlog pa’i rig
-          sngags kyi rgyal mo chen mo/</title>
+        <title type="otherTitle" xml:lang="zh">佛頂大白傘蓋陀羅尼經</title>
         <author role="translatorMain" ref="eft:team-48">Translated by Samye Translations<lb/>under
           the patronage and supervision of 84000: Translating the Words of the Buddha</author>
         <consultant role="projectManager" ref="eft:person-305">Stefan Mang</consultant>
@@ -39,12 +39,13 @@
         <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
         <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+        <editor role="finalReviewer" ref="eft:person-411">David Fiordalis</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 1.0.0 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="2">
+      <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -84,7 +85,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-05-23T07:05:02.653Z" user="admin">23/05/2023 07:05:02</note>
+        <note type="lastUpdated" date-time="2023-06-19T07:37:41.482Z" user="admin">19/06/2023 07:37:41</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:46:40.495Z" user="line-tofte">3</note>
@@ -118,8 +119,11 @@
         <note type="updated" update="text-version" value="0.0.15" date-time="2023-04-11T15:05:55.997Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.16" date-time="2023-04-11T15:06:35.344Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2023-05-23T07:04:58.312Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-23T07:04:58.312Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2023-05-23T07:04:58.312Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-23T07:04:58.312Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-07T11:56:21.708Z" user="line-tofte">Auto (update-contributors)</note>
+          <note type="updated" update="translation-status" value="1.a" date-time="2023-06-19T07:37:37.169Z" user="sameer">1.a</note>
+          <note type="updated" update="text-version" value="1.0.0" date-time="2023-06-19T07:37:37.169Z" user="sameer">First published version.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -200,11 +204,11 @@
             deities and a type of magical formula, thus indicating their inseparability. To recite
             Sitātapatrā’s spell—or to wear it, inscribe it on a talisman, insert it into a caitya,
             and so forth—is to summon the powerful deity to intercede on one’s behalf. The primary
-            name of the spell in Sanskrit is <foreign xml:lang="Sa-Ltn" type="term">sarva­tathāgatoṣṇīṣa­sitātatapatrā</foreign>,<note place="end" xml:id="UT22084-090-034-10"> In most but not all citations of the spell’s name—either
+            name of the spell in Sanskrit is <foreign xml:lang="Sa-Ltn" type="term">sarva­tathāgatoṣṇīṣa­sitātapatrā</foreign>,<note place="end" xml:id="UT22084-090-034-10"> In most but not all citations of the spell’s name—either
               as the title of a text or as a reference to the spell within a text—the term “name”
-                (<foreign xml:lang="Sa-Ltn" type="term">naman</foreign>; <foreign xml:lang="Bo-Ltn" type="term">zhes bya ba</foreign>) immediately follows the compound <foreign xml:lang="Sa-Ltn" type="quote">sarva­tathāgatoṣṇīṣa­sitātrapatrā</foreign>, thereby
+              (<foreign xml:lang="Sa-Ltn" type="term">nāman</foreign>; <foreign xml:lang="Bo-Ltn" type="term">zhes bya ba</foreign>) immediately follows the compound <foreign xml:lang="Sa-Ltn" type="quote">sarva­tathāgatoṣṇīṣa­sitātapatrā</foreign>, thereby
               marking it as the primary title of the deity/spell/text. In a small number of
-              instances the word <foreign xml:lang="Sa-Ltn" type="term">naman</foreign> is omitted
+              instances the word <foreign xml:lang="Sa-Ltn" type="term">nāman</foreign> is omitted
               altogether, and in rare cases it is shifted to a different point in the title. The
               instability of the title both across and within the texts contributes to the challenge
               of interpreting it properly.</note> which is somewhat ambiguous given that the precise
@@ -229,7 +233,7 @@
             for averting these threats before they strike, the spell is designated a <foreign xml:lang="Sa-Ltn" type="term">pratyaṅgirā</foreign>, an “averting” or “counter” spell.
             And, because it is regarded as highly potent for this purpose, it is further referred to
             as <foreign xml:lang="Sa-Ltn" type="term">aparājitā</foreign> (“invincible”).<note place="end" xml:id="UT22084-090-034-13"> A challenge in accurately translating the
-              title of the texts and the spell they contain is that fact that the terms <foreign xml:lang="Sa-Ltn" type="term">pratyaṅgirā</foreign> and <foreign xml:lang="Sa-Ltn" type="term">aparājitā</foreign> are used in other contexts as names of female
+              title of the texts and the spell they contain is the fact that the terms <foreign xml:lang="Sa-Ltn" type="term">pratyaṅgirā</foreign> and <foreign xml:lang="Sa-Ltn" type="term">aparājitā</foreign> are used in other contexts as names of female
               deities and their spells. Here the terms <foreign xml:lang="Sa-Ltn" type="term">aparājitā</foreign> and <foreign xml:lang="Sa-Ltn" type="term">pratyaṅgirā</foreign> are taken as adjectives of <foreign xml:lang="Sa-Ltn" type="term">māhāvidyārajñī</foreign> or <foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign>, depending on the version of title used in a specific text. The
               decision to render it in this way is not meant to be definitive. </note>
                     </p>
@@ -372,7 +376,7 @@
             translation. The colophon does not use the verb “translated” (<foreign xml:lang="Bo-Ltn" type="term">bsgyur</foreign>), but instead tells us that this version, prepared by the
             Kashmiri master Parahitabhadra (ca. eleventh century) and the Tibetan translator Zu Gawé
             Dorjé (<foreign xml:lang="Bo-Ltn">gzu dga’ ba’i rdo rje</foreign>), is based on a
-            comparison of a prior translation with a “old” manuscript discovered at the Amṛtabhavana
+            comparison of a prior translation with an “old” manuscript discovered at the Amṛtabhavana
             monastery in Kashmir.<note place="end" xml:id="UT22084-090-034-28"> Toh 591, <ptr target="#UT22084-090-035-156"/>: <foreign xml:lang="Bo-Ltn" type="quote">paN+Di ta
                 pa ra hi ta b+ha dra dang / lo ts+tsha ba gzu dga’ rdor gyis kha che’i bdud rtsi
                 ’byung gnas kyi gtsug lag khang gi dpe rnying la gtugs nas gtan la phab
@@ -390,7 +394,7 @@
             conclusion found in Toh 593 but otherwise varies only slightly and in a manner more
             consistent with scribal errors and editorial interventions than differences in the
             source material. Toh 592 lacks a translator’s colophon, making it difficult to determine
-            its origin, but a text with nearly the same title is recorded in thyes e Denkarma
+            its origin, but a text with nearly the same title is recorded in the Denkarma
               (<foreign xml:lang="Bo-Ltn">ldan dkar ma</foreign>) imperial-period register of
             Tibetan translations.<note place="end" xml:id="UT22084-090-034-30">
               <title xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa gtsug tor nas byung ba’i gdugs
@@ -760,7 +764,7 @@
                 Reading <foreign xml:lang="Bo-Ltn" type="quote">rgyal ba’i rdo rje ’phreng</foreign>
                 as <foreign xml:lang="Bo-Ltn">rgyal ba rdo rje phreng</foreign>. All Sanskrit
                 versions consulted and the Tibetan translation represented in F report a different
-                verse here. The Sanskrit verse reads, “She in noble Tārā and Bhṛkuṭī, / Victorious
+                verse here. The Sanskrit verse reads, “She is noble Tārā and Bhṛkuṭī, / Victorious
                 and likewise completely victorious. / She is the slayer of Māra / And is famed as
                 Vajramālā (CL<hi rend="subscript">1326</hi>, Dh<hi rend="subscript">33</hi>, UT<hi rend="subscript">M 441-01</hi>, RAS<hi rend="subscript">H 77</hi>). The Tibetan
                 translation in F generally follows the Sanskrit but omits the line “She is the
@@ -916,7 +920,7 @@
             realms of existence!</p>
           <milestone unit="chunk" xml:id="UT22084-090-034-112"/>
           <p tid="62">“<mantra xml:lang="Sa-Ltn" type="syllable">Oṁ</mantra>! Grant auspiciousness
-            to me and all being in the face of danger from rulers,<note place="end" xml:id="UT22084-090-034-113"> This translation follows the syntax of the Sanskrit
+            to me and all beings in the face of danger from rulers,<note place="end" xml:id="UT22084-090-034-113"> This translation follows the syntax of the Sanskrit
               sources, in which this and each of the subsequent phrases are declined in the ablative
               case. </note> thieves, fire, water, poison, weapons, enemies, opposing armies,
             famines, foes, thunderbolts, <ref cRef="F.207.b" key="toh590" type="folio" xml:id="UT22084-090-034-407"/> untimely death, earthquakes, falling meteors, legal
@@ -2816,7 +2820,7 @@
               <term xml:lang="bo">སངས་རྒྱས་སྤྱན།</term>
               <term xml:lang="Sa-Ltn">Buddhalocanā</term>
               <term type="definition">The name of a female Buddhist deity, meaning “Eyes of
-                Awakening,” here used as an epithet of Sitātapatrā.</term>
+                an Awakened One,” here used as an epithet of Sitātapatrā.</term>
             </gloss>
                     </item>
           <item>
@@ -3451,7 +3455,7 @@
                                 </title>); (8) <title xml:lang="Sa-Ltn">Sitātapatrāparājitā</title> (<title xml:lang="Bo-Ltn">gdugs dkar gzhan gyis mi
                   thub pa</title>, Toh 592, <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh592.html">The Invincible
-                    Sitātapatrā</ref>
+                    Sitātapatrā [1]</ref>
                                 </title>); (9) <title xml:lang="Sa-Ltn">Vasudhārā­dhāraṇī</title> (<title xml:lang="Bo-Ltn">nor rgyun ma’i
                 gzungs</title>, Toh 662, <title xml:lang="en">
                                     <ref rend="pending" target="https://read.84000.co/translation/toh662.html">The Dhāraṇī of
