--- a/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
+++ b/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
@@ -7,22 +7,22 @@
         <title type="mainTitle" xml:lang="en">The Supreme Accomplishment of Invincible Averting,
           Sitātapatrā Born from the Uṣṇīṣa of the Tathāgata</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Tathāgatoṣṇīṣa­sitātapatrāparājita­mahāpratyaṅgira­parama­siddha</title>
+        <title type="mainTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པའི་གཙུག་ཏོར་ནས་བྱུང་བའི་གདུགས་དཀར་པོ་ཅན་གཞན་གྱིས་མི་ཐུབ་པ་ཕྱིར་ཟློག་པ་ཆེན་མོ་མཆོག་ཏུ་གྲུབ་པ།</title>
         <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa’i gtsug tor nas byung ba’i
           gdugs dkar po can gzhan gyis mi thub pa phyir zlog pa chen mo mchog tu grub pa</title>
-        <title type="mainTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པའི་གཙུག་ཏོར་ནས་བྱུང་བའི་གདུགས་དཀར་པོ་ཅན་གཞན་གྱིས་མི་ཐུབ་པ་ཕྱིར་ཟློག་པ་ཆེན་མོ་མཆོག་ཏུ་གྲུབ་པ།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa’i gtsug tor nas byung
-          ba’i gdugs dkar po can gzhan gyis mi thub pa phyir zlog pa chen mo mchog tu grub pa zhes
-          bya ba’i gzungs</title>
-        <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་གཙུག་ཏོར་ནས་བྱུང་བའི་གདུགས་དཀར་པོ་ཅན་གཞན་གྱིས་མི་ཐུབ་པ་ཕྱིར་ཟློག་པ་ཆེན་མོ་མཆོག་ཏུ་གྲུབ་པ་ཞེས་བྱ་བའི་གཟུངས།</title>
         <title type="longTitle" xml:lang="en">The Noble Dhāraṇī “The Supreme Accomplishment of
           Invincible Averting, Sitātapatrā Born from the Uṣṇīṣa of the Tathāgata”</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Ārya­tathāgatoṣṇīṣa­sitātapatrāparājita­mahāpratyaṅgira­parama­siddhanāma­dhāraṇī</title>
+        <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་གཙུག་ཏོར་ནས་བྱུང་བའི་གདུགས་དཀར་པོ་ཅན་གཞན་གྱིས་མི་ཐུབ་པ་ཕྱིར་ཟློག་པ་ཆེན་མོ་མཆོག་ཏུ་གྲུབ་པ་ཞེས་བྱ་བའི་གཟུངས།</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa’i gtsug tor nas byung
+          ba’i gdugs dkar po can gzhan gyis mi thub pa phyir zlog pa chen mo mchog tu grub pa zhes
+          bya ba’i gzungs</title>
+        <title type="otherTitle" xml:lang="Sa-Ltn">tathāgatoṣṇīṣa­sitātapatrāparājita­mahāpratyaṅgirāparama­siddhānāmadhāraṇī</title>
         <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa’i gtsug tor nas
           byung ba’i gdugs dkar po can gzhan gyis mi thub pa phyir bzlog pa chen mo mchog tu grub pa
           zhes bya ba’i gzungs/</title>
         <title type="otherTitle" xml:lang="Bo-Ltn">gdugs dkar gzhan gyis mi thub pa phyir bzlog pa
           chen mo mchog tu grub pa’i gzungs</title>
-        <title type="otherTitle" xml:lang="Sa-Ltn">tathāgatoṣṇīṣa­sitātapatrāparājita­mahāpratyaṅgirāparama­siddhānāmadhāraṇī</title>
         <author role="translatorMain" ref="eft:team-48">Translated by Samye Translations<lb/>under
           the patronage and supervision of 84000: Translating the Words of the Buddha</author>
         <consultant role="projectManager" ref="eft:person-305">Stefan Mang</consultant>
@@ -35,12 +35,14 @@
         <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
         <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+        <editor role="finalReviewer" ref="eft:person-411">David Fiordalis</editor>
+        <author role="translatorEng" ref="eft:person-320">Roger Espel Llima</author>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 1.0.0 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="2">
+      <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -73,7 +75,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-05-23T07:06:25.312Z" user="admin">23/05/2023 07:06:25</note>
+        <note type="lastUpdated" date-time="2023-06-19T07:55:28.394Z" user="admin">19/06/2023 07:55:28</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:05.962Z" user="line-tofte">3</note>
@@ -107,8 +109,11 @@
         <note type="updated" update="text-version" value="0.0.15" date-time="2023-04-11T15:07:14.775Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.16" date-time="2023-04-11T15:08:00.816Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2023-05-23T07:06:20.896Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-23T07:06:20.896Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2023-05-23T07:06:20.896Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-23T07:06:20.896Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-07T11:57:46.279Z" user="line-tofte">Auto (update-contributors)</note>
+          <note type="updated" update="translation-status" value="1.a" date-time="2023-06-19T07:55:24.081Z" user="sameer">1.a</note>
+          <note type="updated" update="text-version" value="1.0.0" date-time="2023-06-19T07:55:24.081Z" user="sameer">First published version.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -188,11 +193,11 @@
             deities and a type of magical formula, thus indicating their inseparability. To recite
             Sitātapatrā’s spell—or to wear it, inscribe it on a talisman, insert it into a caitya,
             and so forth—is to summon the powerful deity to intercede on one’s behalf. The primary
-            name of the spell in Sanskrit is <foreign xml:lang="Sa-Ltn" type="term">sarva­tathāgatoṣṇīṣa­sitātatapatrā</foreign>,<note place="end" xml:id="UT22084-090-035-10"> In most but not all citations of the spell’s name—either
+            name of the spell in Sanskrit is <foreign xml:lang="Sa-Ltn" type="term">sarva­tathāgatoṣṇīṣa­sitātapatrā</foreign>,<note place="end" xml:id="UT22084-090-035-10"> In most but not all citations of the spell’s name—either
               as the title of a text or as a reference to the spell within a text—the term “name”
-                (<foreign xml:lang="Sa-Ltn" type="term">naman</foreign>; <foreign xml:lang="Bo-Ltn" type="term">zhes bya ba</foreign>) immediately follows the compound <foreign xml:lang="Sa-Ltn" type="quote">sarvatathāgatoṣṇīṣasitātrapatrā</foreign>, thereby
+              (<foreign xml:lang="Sa-Ltn" type="term">nāman</foreign>; <foreign xml:lang="Bo-Ltn" type="term">zhes bya ba</foreign>) immediately follows the compound <foreign xml:lang="Sa-Ltn" type="quote">sarvatathāgatoṣṇīṣasitātapatrā</foreign>, thereby
               marking it as the primary title of the deity/spell/text. In a small number of
-              instances the word <foreign xml:lang="Sa-Ltn" type="term">naman</foreign> is omitted
+              instances the word <foreign xml:lang="Sa-Ltn" type="term">nāman</foreign> is omitted
               altogether, and in rare cases it is shifted to a different point in the title. The
               instability of the title both across and within the texts contributes to the challenge
               of interpreting it properly.</note> which is somewhat ambiguous given that the precise
@@ -217,7 +222,7 @@
             for averting these threats before they strike, the spell is designated a <foreign xml:lang="Sa-Ltn" type="term">pratyaṅgirā</foreign>, an “averting” or “counter” spell.
             And, because it is regarded as highly potent for this purpose, it is further referred to
             as <foreign xml:lang="Sa-Ltn" type="term">aparājitā</foreign> (“invincible”).<note place="end" xml:id="UT22084-090-035-13"> A challenge in accurately translating the
-              title of the texts and the spell they contain is that fact that the terms <foreign xml:lang="Sa-Ltn" type="term">pratyaṅgirā</foreign> and <foreign xml:lang="Sa-Ltn" type="term">aparājitā</foreign> are used in other contexts as names of female
+              title of the texts and the spell they contain is the fact that the terms <foreign xml:lang="Sa-Ltn" type="term">pratyaṅgirā</foreign> and <foreign xml:lang="Sa-Ltn" type="term">aparājitā</foreign> are used in other contexts as names of female
               deities and their spells. Here the terms <foreign xml:lang="Sa-Ltn" type="term">aparājitā</foreign> and <foreign xml:lang="Sa-Ltn" type="term">pratyaṅgirā</foreign> are taken as adjectives of <foreign xml:lang="Sa-Ltn" type="term">māhāvidyārajñī</foreign> or <foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign>, depending on the version of title used in a specific text. The
               decision to render it in this way is not meant to be definitive. </note>
           </p>
@@ -344,7 +349,7 @@
             Tibetan translation. Its colophon does not use the verb “translated” (<foreign xml:lang="Bo-Ltn" type="term">bsgyur</foreign>), but instead tells us that this
             version, prepared by the Kashmiri master Parahitabhadra (ca. eleventh century) and the
             Tibetan translator Zu Gawé Dorjé (<foreign xml:lang="Bo-Ltn">gzu dga’ ba’i rdo
-              rje</foreign>), is based on a comparison of a prior translation with a “old”
+              rje</foreign>), is based on a comparison of a prior translation with an “old”
             manuscript discovered at the Amṛtabhavana monastery in Kashmir.<note place="end" xml:id="UT22084-090-035-28"> Toh 591, <ptr target="#UT22084-090-035-156"/>: <foreign xml:lang="Bo-Ltn" type="quote">paN+Di ta pa ra hi ta b+ha dra dang / lo ts+tsha ba
                 gzu dga’ rdor gyis kha che’i bdud rtsi ’byung gnas kyi gtsug lag khang gi dpe rnying
                 la gtugs nas gtan la phab pa</foreign>.</note> Though the prior translation that
@@ -2512,7 +2517,7 @@
               <term xml:lang="bo">སངས་རྒྱས་སྤྱན།</term>
               <term xml:lang="Sa-Ltn">Buddhalocanā</term>
               <term type="definition">The name of a female Buddhist deity, meaning “Eyes of
-                Awakening,” here used as an epithet of Sitātapatrā.</term>
+                an Awakened One,” here used as an epithet of Sitātapatrā.</term>
             </gloss>
                     </item>
           <item>
@@ -2903,7 +2908,7 @@
                                 </title>); (8) <title xml:lang="Sa-Ltn">Sitātapatrāparājitā</title> (<title xml:lang="Bo-Ltn">gdugs dkar gzhan gyis mi
                   thub pa</title>, Toh 592, <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh592.html">The Invincible
-                    Sitātapatrā</ref>
+                    Sitātapatrā [1]</ref>
                                 </title>); (9) <title xml:lang="Sa-Ltn">Vasudhārā­dhāraṇī</title> (<title xml:lang="Bo-Ltn">nor rgyun ma’i
                 gzungs</title>, Toh 662, <title xml:lang="en">
                                     <ref rend="pending" target="https://read.84000.co/translation/toh662.html">The Dhāraṇī of
