--- a/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.6 <date>2019</date>
+                <edition>v 0.1.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-091-064"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-17T09:37:35.362Z" user="admin">17/04/2023 09:37:35</note>
+                <note type="lastUpdated" date-time="2023-06-19T11:05:41.182Z" user="admin">19/06/2023 11:05:41</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:02.613Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:02.613Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">2.h</note>
@@ -49,6 +49,8 @@
                 <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T14:33:15.674Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T09:37:31.039Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:37:31.039Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:05:36.942Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:05:36.942Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
