--- a/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.6 <date>2019</date>
+                <edition>v 0.1.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-091-065"/>
                 <date/>
             </publicationStmt>
@@ -46,7 +46,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-17T09:38:31.897Z" user="admin">17/04/2023 09:38:31</note>
+                <note type="lastUpdated" date-time="2023-06-19T11:07:57.787Z" user="admin">19/06/2023 11:07:57</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:48.589Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:48.589Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T08:46:40.877Z" user="line-tofte">2.h</note>
@@ -58,6 +58,8 @@
                 <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T14:34:14.553Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T09:38:27.596Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:38:27.596Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:07:53.529Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:07:53.529Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
