--- a/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -18,11 +18,11 @@
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.6 <date>2019</date>
+                <edition>v 0.1.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-091-067"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-17T09:40:26.543Z" user="admin">17/04/2023 09:40:26</note>
+                <note type="lastUpdated" date-time="2023-06-19T11:10:06.338Z" user="admin">19/06/2023 11:10:06</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:09:33.919Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:09:33.919Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T09:53:08.104Z" user="line-tofte">2.h</note>
@@ -59,6 +59,8 @@
                 <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T14:36:18.372Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T09:40:22.242Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:40:22.242Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:10:02.085Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:10:02.085Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
