--- a/translations/kangyur/translations/090-036_toh592,986-the_invincible_sitatapatra_1.xml
+++ b/translations/kangyur/translations/090-036_toh592,986-the_invincible_sitatapatra_1.xml
@@ -36,7 +36,7 @@
         <editor role="finalReviewer" ref="eft:person-411">David Fiordalis</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -79,7 +79,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-06-19T12:21:20.104Z" user="admin">19/06/2023 12:21:20</note>
+        <note type="lastUpdated" date-time="2023-06-19T12:27:33.126Z" user="admin">19/06/2023 12:27:33</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:46.557Z" user="line-tofte">3</note>
@@ -119,6 +119,7 @@
         <note type="updated" update="text-version" value="0.0.4" date-time="2023-06-07T11:58:56.452Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="text-version" value="0.0.5" date-time="2023-06-12T18:32:19.675Z" user="andreas">Auto (update-titles)</note>
           <note type="updated" update="text-version" value="0.0.6" date-time="2023-06-19T12:21:17.234Z" user="john">Various edits to intro and glossary.</note>
+          <note type="updated" update="text-version" value="0.0.7" date-time="2023-06-19T12:27:30.267Z" user="john">0.0.7</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
