--- a/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
+++ b/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
@@ -12,10 +12,10 @@
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-100-022"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-17T10:16:04.547Z" user="admin">17/04/2023 10:16:04</note>
+                <note type="lastUpdated" date-time="2023-06-19T13:11:31.361Z" user="admin">19/06/2023 13:11:31</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:55:25.104Z" user="line-tofte">Auto (update-contributors)</note>
@@ -42,6 +42,8 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-23T14:31:52.593Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T10:16:00.353Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-04-17T10:16:00.353Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-06-19T13:11:27.07Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-06-19T13:11:27.07Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
