--- a/translations/kangyur/placeholders/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
+++ b/translations/kangyur/placeholders/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
@@ -12,10 +12,10 @@
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-101-008"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-20T08:03:55.504Z" user="admin">20/02/2023 08:03:55</note>
+                <note type="lastUpdated" date-time="2023-06-19T13:13:56.409Z" user="admin">19/06/2023 13:13:56</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:58:00.359Z" user="line-tofte">Auto (update-contributors)</note>
@@ -42,6 +42,8 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-02-13T07:46:08.139Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-02-20T08:03:49.849Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-02-20T08:03:49.849Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-06-19T13:13:52.118Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-06-19T13:13:52.118Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
