--- a/translations/kangyur/placeholders/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
+++ b/translations/kangyur/placeholders/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
@@ -7,7 +7,7 @@
                 <title type="mainTitle" xml:lang="en">Dhāraṇī of the Supreme Stem Ornament</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">gulmālaṃkārāgradhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sdong po rgyan gyi mchog gi gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">[Note: Degé, Yunglo and Peking have gaṇu-ālaṃkārāgra°]</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">[Note: Degé, Yongle, and Peking have gaṇu-ālaṃkārāgra°]</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagulmālaṃkārāgranāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagaṇḍālaṃkārāgranāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sdong po rgyan gyi mchog ces bya ba'i gzungs/</title>
@@ -15,10 +15,10 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.6 <date>2019</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-101-122"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-16T08:43:24.266Z" user="admin">16/03/2023 08:43:24</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T13:01:17.516Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T13:01:17.516Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-13T13:01:41.037Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T11:55:02.526Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-04-25T11:55:02.526Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2023-03-16T08:43:20.081Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-16T08:43:20.081Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-06-19T13:15:07.744Z" user="admin">19/06/2023 13:15:07</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T13:01:17.516Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T13:01:17.516Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-13T13:01:41.037Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T11:55:02.526Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-04-25T11:55:02.526Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2023-03-16T08:43:20.081Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-16T08:43:20.081Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2023-06-19T13:15:03.462Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-06-19T13:15:03.462Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
